manifests/openshift/httpbin-echo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: default
spec:
  parentRefs:
  - name: poc-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/get"
    - path:
        type: PathPrefix
        value: "/headers"
    backendRefs:
    - name: httpbin-backend
      kind: Backend
      group: ainetworking.prototype.x-k8s.io
      port: 80
