manifests/openshift/key-validating-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: key-validating-route
  namespace: default
spec:
  parentRefs:
  - name: poc-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/secure/"
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: "/"
    backendRefs:
    - name: key-validating-backend
      kind: Backend
      group: ainetworking.prototype.x-k8s.io
      port: 8000
